fixed text area text colour to white when dark mode is toggled

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -182,6 +182,7 @@ textarea:focus{
 
 .darknotes{
     background-color: grey;
+    color: white;
 }
 
 .white::placeholder{
